--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -41,6 +41,8 @@
   padding-right: 20px;
   padding-top: 4px;
   box-shadow: 0px 0px 5px #607d8b;
+  height: 100%;
+  word-break: break-all;
 }
 
 .todo.done > span {
