--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -42,7 +42,7 @@
   padding-top: 4px;
   box-shadow: 0px 0px 5px #607d8b;
   height: 100%;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .todo.done > span {
