--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -30,9 +30,7 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 15px;
-  height: 50px;
 }
-
 .todo > span {
   width: 900px;
   background-color: rgb(252, 251, 251);
@@ -42,16 +40,20 @@
   padding-top: 4px;
   box-shadow: 0px 0px 5px #607d8b;
   height: 100%;
-  word-break: break-word;
+  word-break: break-all;
 }
 
 .todo.done > span {
+  width: 900px;
+  background-color: rgb(252, 251, 251);
+  font-size: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
   box-shadow: 0px 0px 5px #607d8b;
   background: rgb(214, 205, 205);
   color: rgb(143, 142, 142);
   text-decoration: line-through;
 }
-
 .add-confirm-icon {
   transform: scale(2);
   cursor: pointer;
