--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,3 +29,7 @@ body {
   border-bottom: 1px solid #607d8b !important;
   box-shadow: 0 1px 0 0 #607d8b !important;
 }
+
+.alert {
+  margin-top: 2rem;
+}
