--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -66,11 +66,6 @@
   cursor: pointer;
 }
 
-.add-confirm-icon:hover {
-  cursor: pointer;
-  transform: scale(2.2);
-}
-
 .edit-button,
 .delete-button {
   cursor: pointer;
@@ -80,6 +75,15 @@
 .change-button {
   margin-right: 18px;
   cursor: pointer;
+}
+
+.logout-icon {
+  transform: scale(1.5);
+}
+
+.add-confirm-icon:hover {
+  cursor: pointer;
+  transform: scale(2.2);
 }
 
 .edit-button:hover,
