--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -46,7 +46,7 @@
   transition-duration: 0.5s;
 }
 
-.todo.done > span {
+.todo > a {
   width: 900px;
   background-color: rgb(252, 251, 251);
   font-size: 25px;
@@ -59,7 +59,38 @@
   display: flex;
   transition-property: all;
   transition-duration: 0.5s;
-  background: rgb(214, 205, 205);
+}
+
+.todo.done > span {
+  width: 900px;
+  font-size: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 4px;
+  box-shadow: 0px 0px 5px #607d8b;
+  word-break: break-word;
+  align-items: center;
+  display: flex;
+  transition-property: all;
+  transition-duration: 0.5s;
+  background-color: rgb(224, 223, 223);
+  color: rgb(143, 142, 142);
+  text-decoration: line-through;
+}
+
+.todo.done > a {
+  width: 900px;
+  font-size: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 4px;
+  box-shadow: 0px 0px 5px #607d8b;
+  word-break: break-word;
+  align-items: center;
+  display: flex;
+  transition-property: all;
+  transition-duration: 0.5s;
+  background-color: rgb(224, 223, 223);
   color: rgb(143, 142, 142);
   text-decoration: line-through;
 }
