--- a/src/styles/welcomePage.css
+++ b/src/styles/welcomePage.css
@@ -4,7 +4,7 @@
   color: #607d8b;
   display: flex;
   justify-content: center;
-  margin-top: 200px;
+  padding-top: 200px;
   font-weight: bold;
 }
 
