--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -23,6 +23,10 @@
   padding: 5px 20px;
 }
 
+.add-edit-input::placeholder {
+  color: rgba(0, 0, 0, 0.7);
+}
+
 .todo {
   margin-top: 20px;
   display: flex;
@@ -73,9 +77,9 @@
   display: flex;
   transition-property: all;
   transition-duration: 0.5s;
-  background-color: rgb(224, 223, 223);
   color: rgb(143, 142, 142);
   text-decoration: line-through;
+  opacity: 0.5;
 }
 
 .todo.done > a {
@@ -90,9 +94,9 @@
   display: flex;
   transition-property: all;
   transition-duration: 0.5s;
-  background-color: rgb(224, 223, 223);
   color: rgb(143, 142, 142);
   text-decoration: line-through;
+  opacity: 0.5;
 }
 
 .add-confirm-icon {
