--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,18 @@
 
 body {
   background: rgb(247, 245, 245);
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0, #eaf1f7),
+    color-stop(1, #d5f2f5)
+  );
+  background-image: -o-linear-gradient(bottom, #eaf1f7 0%, #d5f2f5 100%);
+  background-image: -moz-linear-gradient(bottom, #eaf1f7 0%, #d5f2f5 100%);
+  background-image: -webkit-linear-gradient(bottom, #eaf1f7 0%, #d5f2f5 100%);
+  background-image: -ms-linear-gradient(bottom, #eaf1f7 0%, #d5f2f5 100%);
+  background-image: linear-gradient(to bottom, #eaf1f7 0%, #d5f2f5 100%);
 }
 
 #navL:hover {
